# waking-nightmare-rust

./: .gitignore  Cargo.toml  README.md
applications/core/: Cargo.toml
applications/core/src/engine/: core.rs
applications/editor/: Cargo.toml  README.md
applications/editor/src/: lib.rs  main.rs
builds/desktop/: Cargo.toml
builds/wasm/: Cargo.toml
core/: Cargo.toml  README.md
core/src/: lib.rs
core/src/app/: app.rs
core/src/assets/: mod.rs
core/src/engine/: core.rs  engine_context.rs  mod.rs
core/src/math/: mod.rs
core/src/objects/: gameObject.rs  mod.rs  object.rs  object_traits.rs
core/src/rendering/: mod.rs  render_context.rs
core/src/scene/: scene.rs
core/src/traits/: core.rs  mod.rs  registry.rs  systems.rs
data_structures/sparse_set/: Cargo.toml
data_structures/sparse_set/src/: sparse_set.rs
demos/demo/: Cargo.toml
demos/desktop_demo/: Cargo.toml
demos/desktop_demo/src/: main.rs
demos/wasm_demo/: Cargo.toml
demos/webgl_demo/: Cargo.toml
demos/webgl_demo/src/: lib.rs
desktop/: Cargo.toml
desktop/src/: lib.rs  main.rs  tmp.rs
desktop/src/desktop_app/: app.rs
desktop/src/window_context/: mod.rs  window_attributes.rs
editor/: Cargo.toml  README.md  build.rs
editor/src/: lib.rs
editor/src/editor/: editor.rs  editor_window.rs  egui_glow_support.rs  mod.rs
editor/src/editor/editor_panels/: entity_panel.rs
editor/src/editor/editor_window/: editor_window.rs
editor/src/editor_old/: editor.rs
editor/src/editor_old/editor_window/: editor_window.rs  mod.rs
editor/src/pure_glow/: pure_glow.rs
events/: README.md
events/src/: event.rs  event_bus.rs
gl_window_context/: Cargo.toml
gl_window_context/src/: gl_context.rs  lib.rs
glwn/: Cargo.toml
glwn/src/: lib.rs
graphics/gl_window_context/: README.md
graphics/gl_window_context/src/: gl_config.rs
graphics/glwn/: Cargo.toml  README.md  build.rs
math/: Cargo.toml  README.md  lib.rs
math/src/: lib.rs
math/src/matrices/: matrix_2x2.rs  matrix_3x3.rs  matrix_4x4.rs  matrix_traits.rs
math/src/quaternions/: mod.rs  quaternion.rs
math/src/transforms/: transform.rs
math/src/vectors/: vector2.rs  vector3.rs  vector3_int.rs  vector_traits.rs
modules/inputs/: Cargo.toml
modules/kinematics/: Cargo.toml
modules/lighting/: Cargo.toml
systems/events/: Cargo.toml
systems/events/src/: event.rs  event_bus.rs  lib.rs
testing/: Cargo.toml
testing/src/: main.rs
waking-nightmare_core/: Cargo.toml  LICENSE
waking-nightmare_core/src/math/: mod.rs
waking-nightmare_core/src/objects/: gameObject.rs  mod.rs  object.rs
waking-nightmare_demo/: Cargo.toml
waking-nightmare_editor/: Cargo.toml
waking-nightmare_kinematics/: Cargo.toml
waking-nightmare_lighting/: Cargo.toml
waking-nightmare_rng/: Cargo.toml
waking-nightmare_rng/src/: prng.rs
wasm/: Cargo.toml
wasm/src/: lib.rs  main.rs
webgl/: Cargo.toml  README.md
webgl/src/: main.rs
(+115 files in other folders)
