[workspace]
edition = "2024"
rust-version = "1.90.0"
resolver = "2"
members = [
  "applications/core",
  "applications/editor",
  "builds/desktop",
  "builds/wasm",
  "data_structures/sparse_set",
  "demos/desktop_demo",
  "demos/wasm_demo",
  "graphics/glwn",
  "graphics/gl_window_context",
  "math",
  "modules/inputs",
  "modules/kinematics",
  "modules/lighting",
  "systems/events",
]
