[package]
name = "editor"
version = "0.0.1"
edition = "2024"
rust-version = "1.87.0"

[dependencies]
core = { path = "../core" }
winit = {version = "0.30.12", features = ["rwh_06"]}
glutin = "0.32.3"
glutin-winit = {version = "0.5.0"}
egui = "0.32.1"
egui-winit = {version = "0.32.1"}
egui_glow = { version = "0.32.1", features = ["winit"]}
eframe = "0.32.1"
log = { version = "0.4", features = ["std"] }