[package]
name = "editor"
version = "0.0.1"
edition = "2024"
rust-version = "1.90.0"

[dependencies]
gl_window_context = { path = "../gl_window_context" }
glwn = { path = "../glwn" }
core = { path = "../core" }
winit = "0.30.12"
glutin = "0.32.3"
glutin-winit = "0.5.0"
raw-window-handle = "0.6.2"
egui = "0.33"
egui_extras = "0.33"
egui-winit = "0.33"
egui_glow = { version = "0.33", features = ["egui-winit", "winit"] }
glow = "0.16.0"
