[package]
name = "desktop"
version = "0.0.1"
edition = "2024"
rust-version = "1.90.0"

[dependencies]
gl_window_context = { path = "../../graphics/gl_window_context" }
core = { path = "../../applications/core" }
winit = "0.30.12"
glutin = "0.32.3"
glutin-winit = "0.5.0"
raw-window-handle = "0.6.2"

[build-dependencies]
cfg_aliases = "0.2.1"
