[package]
name = "wasm"
version = "0.0.1"
edition = "2024"
rust-version = "1.90.0"

[build]
target = "wasm32-unknown-unknown"

[dependencies]
core = { path = "../../applications/core" }
js-sys = "0.3.77" 
web-sys = { version = "0.3.77", features = ["Window", "Document", "HtmlCanvasElement", "WebGl2RenderingContext"] }
wasm-bindgen = "0.2.100"
glow = { version = "0.16.0" }
